Console content update

--- a/index.html
+++ b/index.html
@@ -813,5 +813,11 @@
 			// Call WOW.js
 			new WOW().init();
 		</script>
+		<script>
+			console.log("%cHello ! This is Anirudh Goel.", "color: green");
+			console.log("%cYou have opened the console of my website.", "color: indigo");
+			console.log("%cWhen you're backed against the wall, break the goddamn thing down.", "color: black");
+			// mediumslateblue
+		</script>
 	</body>
 </html>
