Corrected links to demos + changed order of technologies in projects

--- a/index.html
+++ b/index.html
@@ -71,12 +71,6 @@
 				<div class='collapse navbar-collapse' id='myNavbar'>
 					<ul class='nav navbar-nav'>
 						<li>
-							<a href="https://www.facebook.com/profile.php?id=100008384688733" target='_blank'>
-								<i class='fa fa-facebook'></i>
-								&nbsp;Facebook
-							</a>
-						</li>
-						<li>
 							<a href="https://in.linkedin.com/in/anirudh-goel-00792774" target='_blank'>
 								<i class='fa fa-linkedin'></i>
 								&nbsp;LinkedIn
@@ -94,11 +88,25 @@
 								&nbsp;Hackerrank
 							</a>
 						</li>
-						<li>
-							<a href="https://www.pinterest.com/anirudhgoel/" target='_blank'>
-								<i class='fa fa-pinterest'></i>
-								&nbsp;Pinterest
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+								&nbsp;More
+								<span class="caret"></span>
 							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="https://www.pinterest.com/anirudhgoel/" target='_blank'>
+										<i class='fa fa-pinterest'></i>
+										&nbsp;Pinterest
+									</a>
+								</li>
+								<li>
+									<a href="https://www.facebook.com/profile.php?id=100008384688733" target='_blank'>
+										<i class='fa fa-facebook'></i>
+										&nbsp;Facebook
+									</a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 					<ul class='nav navbar-nav navbar-right'>
@@ -156,7 +164,7 @@
 									</span>
 								</strong>
 								<br>
-								Hey friend, currently studying Bachelors of Technology (B. Tech.) at Maharaja Agrasen Institute of Technology, I'm a follower of my instinct and passion which leads me to have considerable knowledge in the fields of Web Developement, Graphic Designing, Blogging and more.
+								Hey friend, currently studying Bachelors of Technology (B. Tech.) at Maharaja Agrasen Institute of Technology, I'm a follower of my instinct and passion which leads me to have considerable knowledge in the fields of Web Development, Graphic Designing, Blogging and more.
 							</div>
 						</div>
 						<div class='col-sm-1'></div>
@@ -202,7 +210,7 @@
 											<a href="https://pinterestautomatic.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
 										<div class='panel-footer'>
-											 Pinterest API, Pinterest OAuth 2.0, Cookies, HTML5, CSS3, Bootstrap, PHP
+											PHP, Pinterest API, Pinterest OAuth 2.0, Cookies, HTML5, CSS3, Bootstrap
 										</div>
 									</div>
 								</div>
@@ -247,7 +255,7 @@
 											<a href="https://edu-chatbot.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
 										<div class='panel-footer'>
-											HTML5, CSS3, Bootstrap, PHP, API, JS, jQuery
+											PHP, API, JS, jQuery, HTML5, CSS3, Bootstrap
 										</div>
 									</div>
 								</div>
@@ -273,7 +281,7 @@
 											<a href="https://interests-ranker.herokuapp.com/sample/index.html" target='_blank'>Demo</a></strong>
 										</div>
 										<div class='panel-footer'>
-											HTML5, CSS3, Bootstrap, PHP, Github API, JS
+											PHP, Github API, JS, HTML5, CSS3, Bootstrap
 										</div>
 									</div>
 								</div>
@@ -291,11 +299,10 @@
 										</div>
 										<div class='panel-body'>
 											In this web application, user can enter the information of stocks bought by him and the application obtains the live prices of these stocks along with net profit/loss &amp; displays them in a Portfolio.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Stock-Monitor-and-Portfolio-Manager.git" target='_blank'>Github</a> | 
-											<a href="http://anirudhgoel.xyz/Stock_Monitor/Front_Page.html" target='_blank'>Demo</a></strong>
+											<strong><a href="https://github.com/AnirudhGoel/Stock-Monitor-and-Portfolio-Manager.git" target='_blank'>Github</a>
 										</div>
 										<div class='panel-footer'>
-											HTML5, CSS3, Bootstrap, PHP, API, JS
+											PHP, API, JS, HTML5, CSS3, Bootstrap
 										</div>
 									</div>
 								</div>
@@ -311,10 +318,10 @@
 										</div>
 										<div class='panel-body'>
 											A web-app to list down all your To-Do tasks because every now and then we need to write down our chores. A completely front-end based To Do List made using JavaScript, jQuery and Browser Local Storage.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/To-Do-List" target='_blank'>Github</a></strong>
+											<strong><a href="https://github.com/AnirudhGoel/To-Do-List" target='_blank'>Github</a> | <a href="http://anirudhgoel.github.io/To-Do-List/" target="_blank">Demo</a></strong>
 										</div>
 										<div class='panel-footer'>
-											HTML5, CSS3, Bootstrap, JavaScript, jQuery, Browser Storage
+											 Browser Storage, JS, jQuery, HTML5, CSS3, Bootstrap
 										</div>
 									</div>
 								</div>
@@ -336,11 +343,11 @@
 										<div class='panel-body'>
 											A fun project made by me during learning PHP. A web application for conversion of timestamp to readable date format. Some may not find a point in this, but believe me, as a back-end developer, I use it more than any other service.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Timestamp-Converter.git" target='_blank'>Github</a> | 
-											<a href="http://anirudhgoel.xyz/projects/Timestamp.php" target='_blank'>Demo</a></strong>
+											<a href="https://timestamp-convert.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
 										<br>
 										<div class='panel-footer'>
-											HTML5, CSS3, Bootstrap, PHP
+											PHP, HTML5, CSS3, Bootstrap
 										</div>
 									</div>
 								</div>
@@ -360,7 +367,7 @@
 											<strong><a href="https://github.com/AnirudhGoel/My-Social-Network" target='_blank'>Github</a></strong>
 										</div>
 										<div class='panel-footer'>
-											HTML5, Vanilla CSSS3
+											HTML5, Vanilla CSS3
 										</div>
 									</div>
 								</div>
@@ -379,7 +386,7 @@
 											<strong><a href="https://github.com/AnirudhGoel/Phottendance-Desktop-Web-Portal.git" target='_blank'>Github</a></strong>
 										</div>
 										<div class='panel-footer'>
-											HTML5, CSS3, Bootstrap, Firebase BaAS, API, JS
+											Firebase BaAS, API, JS, HTML5, CSS3, Bootstrap
 										</div>
 									</div>
 								</div>
