Added More button in NavBar + Changed order of tech in projects + Technologies Known completely changed + Indentation changes

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						<li>
 							<a href="https://anirudhgoel.typeform.com/to/LUFqDL" data-mode="1" target="_blank">
 								<i class='fa fa-file-text'></i>
-								&nbsp;Resume / Contact Me
+								&nbsp;Contact Me
 							</a>
 							<script>
 								(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()
@@ -132,12 +132,7 @@
 
 		<div class="main">
 			<section class='page1'>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
+				<br><br><br><br><br><br>
 				<center>
 					<img alt='Anirudh Goel' class='dp img-thumbnail img-responsive' src="img/Anirudh.jpg">
 				</center>
@@ -160,7 +155,7 @@
 							<div class='intro-text'>
 								<strong>
 									<span style='font-size:24px;'>
-										Greetings !	Anirudh Goel welcomes you !
+										Greetings!	Anirudh Goel welcomes you!
 									</span>
 								</strong>
 								<br>
@@ -169,18 +164,14 @@
 						</div>
 						<div class='col-sm-1'></div>
 					</div>
-					<br>
-					<br>
-					<br>
+					<br><br><br>
 				</div>
 			</section>
 			
 
 			<section class="page2">
 				<div class="container-fluid">
-					<br>
-					<br>
-					<br>
+					<br><br><br>
 					<div class="row reponsive">
 						<div class='col-sm-12'>
 							<div class='headings'>
@@ -572,7 +563,41 @@
 				<div class='headings'>
 					Technologies Known
 				</div>
-				<div class='container wow fadeIn'>
+				<div class="container tech-box wow slideInUp">
+					<div class="row">
+						<div class="col-sm-4">
+							HyperText Markup Language (HTML 5)<br><br>
+							Cascading Style Sheets (CSS 3)<br><br>
+							JavaScript (JS)<br><br>
+							Slim Micro Framework<br><br>
+							API<br><br>
+							Firebase BaAS<br><br>
+							Wordpress<br><br>
+							Joomla<br><br>
+						</div>
+						<div class="col-sm-4">
+							Bootstrap : CSS Framework<br><br>
+							Asynchronous JavaScript and XML (AJAX)<br><br>
+							PHP<br><br>
+							Chrome Browser Extensions<br><br>
+							Firefox Browser Extensions<br><br>
+							Cookies and Browser Storage<br><br>
+							jQuery<br><br>
+							Python<br><br>
+						</div>
+						<div class="col-sm-4">
+							MySQL RDBMS<br><br>
+							JavaScript Object Notation (JSON)<br><br>
+							OAuth Authorization (API)<br><br>
+							Git<br><br>
+							xHTML<br><br>
+							Adobe Photoshop<br><br>
+							Adobe Illustrator<br><br>
+							C/C++<br><br>
+						</div>
+					</div>
+				</div>
+				<!-- <div class='container wow fadeIn'>
 					<div class='row'>
 						<div class='col-sm-5 box-padd' align="center">
 							<a class='box'>
@@ -687,7 +712,6 @@
 							</center>
 						</div>
 					</div>
-					<!-- </div> -->
 
 					<div class='row'>
 						<div class="col-sm-1"></div>
@@ -725,7 +749,7 @@
 					<br>
 					<br>
 					<br>
-				</div>
+				</div> -->
 			</section>
 
 
