Added new project + Changed chatbot image

--- a/index.html
+++ b/index.html
@@ -278,6 +278,27 @@
 								</div>
 							</div>
 							<div class='col-sm-4 wow slideInUp' align="center">
+								<img src="img/projects/dictionary.jpg" alt='Terminal Dictionary' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Terminal Dictionary
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											Simple Python script to get the meaning of any word, with disambiguations, directly in the terminal.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/terminal-dictionary" target='_blank'>Github</a></strong>
+										</div>
+										<div class='panel-footer'>
+											Python
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='col-sm-4 wow slideInRight' align="center">
 								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -290,7 +311,7 @@
 										</div>
 										<div class='panel-body'>
 											In this web application, user can enter the information of stocks bought by him and the application obtains the live prices of these stocks along with net profit/loss &amp; displays them in a Portfolio.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Stock-Monitor-and-Portfolio-Manager.git" target='_blank'>Github</a>
+											<strong><a href="https://github.com/AnirudhGoel/Stock-Monitor-and-Portfolio-Manager.git" target='_blank'>Github</a></strong>
 										</div>
 										<div class='panel-footer'>
 											PHP, API, JS, HTML5, CSS3, Bootstrap
@@ -298,7 +319,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInRight' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow slideInLeft' align="center">
 								<img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -317,11 +342,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow slideInLeft' align="center">
+							<div class='col-sm-4 wow slideInUp' align="center">
 								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -343,7 +364,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInUp' align="center">
+							<div class='col-sm-4 wow slideInRight' align="center">
 								<img src="img/projects/social.jpg" alt='My Social Network' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -363,7 +384,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInRight' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow slideInLeft' align="center">
 								<img src="img/projects/phottendance.png" alt='Phottendance' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -382,11 +407,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow slideInLeft' align="center">
+							<div class='col-sm-4 wow slideInUp' align="center">
 								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
