Removed extra .gitignore file

--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
 		<script>
 			console.log("%cHello ! This is Anirudh Goel.", "color: green");
 			console.log("%cYou have opened the console of my website.", "color: indigo");
-			console.log("%cWhen you're backed against the wall, break the goddamn thing down.", "color: black");
+			console.log("%cAlways Hungry !", "color: #FCA311");
 			// mediumslateblue
 		</script>
 	</body>
