Added Pinterest verification meta tag

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 		<meta name="twitter:creator" content="@AnirudhDelhi" />
 		<meta name="twitter:url" content="http://www.anirudhgoel.me" />
 		<meta name="twitter:image" content="img/Anirudh.jpg" />
+		<!-- Pinterest -->
+		<meta name="p:domain_verify" content="5ceeafe5131dabd152c6cdbf8679c17d"/>
 
 		<title>Anirudh Goel</title>
 
