Added 2 new projects - py as cgi and online store

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					<br>
 					<div class='proj-text'>
 						<div class='row'>
-							<div class='col-sm-4 wow slideInLeft' align="center">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/pinterest.png" alt='Pinterest Automatic' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -208,7 +208,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInUp' align="center">
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/whatsapp.png" alt='Whatsapp Emoji Suggestion' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -222,7 +222,7 @@
 										<div class='panel-body'>
 											Chrome Browser extension to convert text smileys to <strong>WhatsApp Emoticons</strong> and also provide <strong>suggestions of similar smilies</strong> (with shortcuts) for Whatsapp Web.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Whatsapp-Emoticons-Suggest" target='_blank'>Github</a> |
-											<a href="https://chrome.google.com/webstore/detail/whatsapp-emoticons-sugges/pdicajhpekmkjildobfnokpdmnejlnfm?hl=en-US&gl=IN" target='_blank'>Download</a></strong>
+											<a href="https://chrome.google.com/webstore/detail/whatsapp-emoticons-sugges/pdicajhpekmkjildobfnokpdmnejlnfm?hl=en-US&gl=IN" target='_blank'>Chrome Download</a></strong> | <strong><a href="https://addons.mozilla.org/addon/whatsapp-emoticons-suggestions/" target="_blank">Mozilla Download</a></strong>
 										</div>
 										<div class='panel-footer'>
 											JS, jQuery
@@ -230,7 +230,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInRight' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/chatbot.png" alt='Chatbot' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -257,8 +257,8 @@
 					</div>
 					<div class='proj-text'>
 						<div class='row'>
-							<div class='col-sm-4 wow slideInLeft' align="center">
-								<img src="img/projects/interest.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
+							<div class='col-sm-4 wow fadeInLeft' align="center">
+								<img src="img/projects/interest.jpg" alt='Interests Ranker' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
 										<div class='panel-heading'>
@@ -279,7 +279,28 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInUp' align="center">
+							<div class='col-sm-4 wow fadeInUp' align="center">
+								<img src="img/projects/store.png" alt='Online Store APIs' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Online Store APIs
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											A set of PHP APIs ready to be used with an <strong>Online Store Mobile App</strong> with verification and automated setup. Also, provides sample data and simple testing platform to test various functionalities of the API.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/Online-Store-API.git" target='_blank'>Github</a></strong>
+										</div>
+										<div class='panel-footer'>
+											PHP, MySQL, AJAX, HTML5, CSS3, Bootstrap
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/dictionary.jpg" alt='Terminal Dictionary' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -300,7 +321,32 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInRight' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
+								<img src="img/projects/cgi.jpg" alt='py on XAMPP' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Run .py on XAMPP
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											A step by step guide to configure XAMPP and modify Python files to run them as CGI on XAMPP, similar to PHP files. It can be particularly useful when you want to make some quick APIs in Python without using any Framework.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/run-py-as-cgi-on-apache.git" target='_blank'>Github</a></strong>
+										</div>
+										<div class='panel-footer'>
+											Python
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -321,11 +367,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow slideInLeft' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -344,7 +386,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInUp' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -366,7 +412,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInRight' align="center">
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/social.jpg" alt='My Social Network' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -386,11 +432,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow slideInLeft' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/phottendance.png" alt='Phottendance' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -409,7 +451,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow slideInUp' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -446,7 +492,7 @@
 				<div class='container-fluid' align="center">
 					<div class="row">
 						<div class="col-md-6">
-							<div class="intern-box wow slideInLeft">
+							<div class="intern-box wow fadeInLeft">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -458,7 +504,7 @@
 											<div class="intern-box-heading" align="center">
 												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="http://www.academistic.com/">Academistic</a></strong></span>
 												<br>
-												<div class="col-sm-6 intern-post">Full Stack Developer</div>
+												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
 												<div class="col-sm-6 intern-time">June '16 - July '16</div>
 											</div>
 											I learned endless things about Linux, Git, PHP, AJAX, MySQL, jQuery and many more technologies here.
@@ -475,7 +521,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box wow slideInLeft">
+							<div class="intern-box wow fadeInLeft">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -487,7 +533,7 @@
 											<div class="intern-box-heading" align="center">
 												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="http://mait.acm.org/"><strong>ACM</strong> MAIT</a></span>
 												<br>
-												<div class="col-sm-6 intern-post">Full Stack Developer</div>
+												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
 												<div class="col-sm-6 intern-time">June '16 - Present</div>
 											</div>
 											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded !
@@ -497,7 +543,7 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<div class="intern-box wow slideInRight">
+							<div class="intern-box wow fadeInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -526,7 +572,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box wow slideInRight">
+							<div class="intern-box wow fadeInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -538,7 +584,7 @@
 											<div class="intern-box-heading" align="center">
 												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="http://www.aiesec.in/">AIESEC</a></strong></span>
 												<br>
-												<div class="col-sm-6 intern-post">Core Manager</div>
+												<div class="col-sm-6 intern-post"><strong>Core Manager</strong></div>
 												<div class="col-sm-6 intern-time">Aug '14 - Dec '14</div>
 											</div>
 											<li>Recruited 5 Associate Members for my team.</li>
@@ -548,7 +594,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box wow slideInRight">
+							<div class="intern-box wow fadeInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -561,9 +607,7 @@
 												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="http://lft.org.in/igniting-young-minds.html">Igniting Young Minds</a><br>Leaders of Tomorrow</strong></span>
 												<br>
 												<div class="col-sm-6 intern-post">
-													<strong>
-														Graphic Designer
-													</strong>
+													<strong>Graphic Designer</strong>
 												</div>
 												<div class="col-sm-6 intern-time">Oct '15 - Apr '16</div>
 											</div>
@@ -586,7 +630,7 @@
 				<div class='headings'>
 					Technologies Known
 				</div>
-				<div class="container tech-box wow slideInUp">
+				<div class="container tech-box wow fadeInUp">
 					<div class="row">
 						<div class="col-sm-4">
 							HyperText Markup Language (HTML 5)<br><br>
@@ -859,7 +903,7 @@
 			function changeAnimation() {
 				var width = $(window).width();
 				if(width < 768) {
-					$(".wow").removeClass("slideInUp slideInLeft slideInRight fadeIn fadeInUp").addClass("fadeInUp");
+					$(".wow").removeClass("fadeInUp fadeInLeft fadeInRight fadeIn fadeInUp").addClass("fadeInUp");
 				}
 			}
 			// Call function on page load
