Removed ads and added Twitter link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 	<head>
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<script>
-			(adsbygoogle = window.adsbygoogle || []).push({
-				google_ad_client: "ca-pub-4087557788199385",
-				enable_page_level_ads: true
-			});
-		</script>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
@@ -113,6 +106,12 @@
 									<a href="https://www.facebook.com/profile.php?id=100008384688733" target='_blank'>
 										<i class='fa fa-facebook'></i>
 										&nbsp;Facebook
+									</a>
+								</li>
+								<li>
+									<a href="https://twitter.com/AnirudhDelhi" target='_blank'>
+										<i class='fa fa-twitter'></i>
+										&nbsp;Twitter
 									</a>
 								</li>
 							</ul>
